# ModelRack

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  PLAN.md  README.md  TODOS.md  build.rs  progress.txt  revision_design.md
.agents/skills/omc-reference/: SKILL.md
.github/workflows/: ci.yml  release.yml
Mockups/: ModelRack-bundle.html  ModelRack.html  app-icon.jsx  app.jsx  data.js  design.md  i18n.js  styles.css  thumbnail.jsx
assets/: AppIcon.icns
assets/data/: printer_profiles.json
docs/: cross-platform-qa.md  release-checklist.md  slicer-discovery.md  slint-migration.md  visual-qa-masks.md  warning-baseline.json  warning-policy.md  window-chrome-qa.md
docs/visual-masks/: todo16-browser-grid.json
scripts/: build-linux-packages.sh  build-macos-app.sh  build-windows-packages.ps1  capture-smoke.sh  check-warning-baseline.py  create-macos-dmg.sh  generate-app-icon.sh  notarize-macos-app.sh  visual-qa-artifacts.py  window-chrome-smoke.py
src/: app.rs  fonts.rs  macos.rs  main.rs  renderer.rs  scanner.rs  slint_shell.rs  strings.rs  thumbnail.rs  thumbnail_cache.rs  utils.rs  view_model.rs  worker.rs
src/db/: mod.rs
src/ui/: empty_state.rs  grid.rs  list.rs  masonry.rs  metadata.rs  mod.rs  settings.rs  sidebar.rs  status.rs  toolbar.rs
ui/: modelrack.slint  theme.slint
