[package]
name = "modelrack"
version = "0.0.3"
edition = "2021"

[features]
slint-shell = ["dep:slint"]

[dependencies]
eframe = { version = "0.31", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.31"
egui_extras = "0.31"
slint = { version = "1.16.1", optional = true, features = ["unstable-fontique-08"] }
wgpu = { version = "24", default-features = false, features = ["metal", "wgsl"] }
walkdir = "2"
stl_io = "0.8"
image = "0.25"
blake3 = "1"
rfd = "0.15"
notify = "8.2"
rayon = "1"
crossbeam-channel = "0.5"
anyhow = "1"
bytemuck = "1"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[lints.rust]
unexpected_cfgs = "allow"
