[package]
name = "modelrack"
version = "0.0.3"
edition = "2021"

[dependencies]
slint = { version = "1.16.1", features = ["unstable-fontique-08", "unstable-winit-030"] }
walkdir = "2"
stl_io = "0.8"
blake3 = "1"
rfd = "0.15"
notify = "8.2"
rayon = "1"
crossbeam-channel = "0.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-segmentation = "1"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
slint-build = "1.16"
