[package]
name = "modelrack"
version = "0.1.3"
edition = "2021"

[features]
# The legacy objc 0.2 macros expand `cfg(feature = "cargo-clippy")` in the
# destination crate. Declaring the compatibility feature keeps rustc's
# check-cfg lint quiet without weakening linting for the rest of ModelRack.
cargo-clippy = []

[dependencies]
slint = { version = "1.16.1", default-features = false, features = ["std", "backend-winit", "renderer-software", "accessibility", "compat-1-2", "unstable-fontique-08", "unstable-winit-030"] }
i-slint-backend-winit = { version = "1.16.1", features = ["renderer-software"] }
walkdir = "2"
stl_io = "0.8"
blake3 = { version = "1", features = ["pure"] }
rfd = "0.15"
notify = "8.2"
rayon = "1"
crossbeam-channel = "0.5"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
unicode-segmentation = "1"
zip = { version = "6", default-features = false, features = ["deflate-flate2-zlib-rs"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
slint-build = "1.16"
